Switched UpdateChecker to use Modrinth instead of Spigot