@@ -1,50 +1,32 @@
 package me.cocolennon.townyspawnmenu.utils;
 
-import me.cocolennon.townyspawnmenu.Main;
-import org.bukkit.Bukkit;
+import com.google.gson.JsonParser;
 import org.bukkit.plugin.java.JavaPlugin;
 
 import java.io.IOException;
 import java.io.InputStream;
-import java.net.URL;
+import java.net.URI;
 import java.util.Scanner;
 import java.util.function.Consumer;
 
 public class UpdateChecker {
-
-    private final Main main;
     private final JavaPlugin plugin;
-    private final int resourceId;
+    private final String projectId;
 
-    public UpdateChecker(Main main, JavaPlugin plugin, int resourceId) {
-        this.main = main;
+    public UpdateChecker(JavaPlugin plugin, String projectId) {
         this.plugin = plugin;
-        this.resourceId = resourceId;
+        this.projectId = projectId;
     }
 
     public void getVersion(final Consumer<String> consumer) {
-        boolean isFolia = Main.getInstance().isFoliaClassPresent();
-
-        if(isFolia) {
-            main.getScheduler().runAsync(() -> {
-                try (InputStream inputStream = new URL("https://api.spigotmc.org/legacy/update.php?resource=" + this.resourceId).openStream(); Scanner scanner = new Scanner(inputStream)) {
-                    if (scanner.hasNext()) {
-                        consumer.accept(scanner.next());
-                    }
-                } catch (IOException exception) {
-                    plugin.getLogger().info("Unable to check for updates: " + exception.getMessage());
-                }
-            });
-        }else{
-            Bukkit.getScheduler().runTaskAsynchronously(this.plugin, () -> {
-                try (InputStream inputStream = new URL("https://api.spigotmc.org/legacy/update.php?resource=" + this.resourceId).openStream(); Scanner scanner = new Scanner(inputStream)) {
-                    if (scanner.hasNext()) {
-                        consumer.accept(scanner.next());
-                    }
-                } catch (IOException exception) {
-                    plugin.getLogger().info("Unable to check for updates: " + exception.getMessage());
-                }
-            });
+        try (InputStream inputStream = URI.create("https://api.modrinth.com/v2/project/" + this.projectId + "/version").toURL().openStream(); Scanner scanner = new Scanner(inputStream).useDelimiter("\\A")) {
+            if(scanner.hasNext()) {
+                String json = scanner.next();
+                String version = JsonParser.parseString(json).getAsJsonArray().get(0).getAsJsonObject().get("version_number").getAsString();
+                consumer.accept(version);
+            }
+        }catch(IOException exception){
+            plugin.getLogger().info("Unable to check for updates: " + exception.getMessage());
         }
     }
 }
